# Practice

./: HSV_color.cpp  gpio.c  p2.cpp  p3.cpp
OpenCV/: p3.cpp
hello/: CMakeLists.txt  README.md
hello/einit/: CMakeLists.txt
hello/einit/src/: security.psl
hello/hello/: CMakeLists.txt
hello/hello/src/: hello.c
hello_with_args/: CMakeLists.txt  README.md  cross-build.sh  expected_output
hello_with_args/einit/: CMakeLists.txt
hello_with_args/einit/src/: init.yaml.in  security.psl
hello_with_args/env/: CMakeLists.txt
hello_with_args/env/src/: env.c
hello_with_args/hello/src/: hello.c
hello_with_args/resources/edl/: Env.edl
separate_storage/: CMakeLists.txt  README.md
separate_storage/common/: common.c  common.h  file_names.h
separate_storage/einit/: CMakeLists.txt
separate_storage/einit/src/: external.psl  init.yaml.in  internal.psl  security_arm.psl  security_x86.psl
separate_storage/resources/edl/: UserManager.edl  VfsUser.edl
separate_storage/resources/files/: userlist.txt
separate_storage/user_manager/: CMakeLists.txt
separate_storage/user_manager/src/: main.cpp  user_manager.cpp  user_manager.h
separate_storage/vfs_user/: CMakeLists.txt
separate_storage/vfs_user/src/: vfs_user.c
